deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
  labels:
    app: uptime
  namespace: uptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: uptime
    spec:
      containers:
      - name: uptime
        image: louislam/uptime-kuma:latest
        ports:
        - name: http
          containerPort: 3001
        imagePullPolicy: Always
        volumeMounts:
            - name: storage
              mountPath: /app/data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: uptime-pv-claim
