service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-svc
  labels:
    app: uptime
  namespace: uptime
spec:
  type: NodePort
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
      name: http
  selector:
    app: uptime
