ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: uptime-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - uptime.infra-am.de
      secretName: uptime-infra-tls
  rules:
    - host: uptime.infra-am.de
      http:
        paths:
          - backend:
              serviceName: uptime-svc
              servicePort: 3001
            path: /
